force-app/main/default/objects/BLN_CorrectiveActionReport__c/BLN_CorrectiveActionReport__c.object-meta.xml
<CustomObject>
    <description>FOUK-3982 Technician Completion of Corrective Action Report.</description>
    <label>Corrective Action Report</label>
    <nameField>
        <displayFormat>CAR-{0000}</displayFormat>
        <label>Corrective Action Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corrective Action Reports</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>