force-app/main/default/objects/BLN_CorrectiveActionReport__c/fields/BLN_ActionsNeededtoResolveWarranty__c.field-meta.xml
<CustomField>
    <fullName>BLN_ActionsNeededtoResolveWarranty__c</fullName>
    <description>FOUK-3982 Store Actions Needed to Resolve Warranty.</description>
    <label>Actions Needed to Resolve Warranty</label>
    <type>TextArea</type>
</CustomField>