force-app/main/default/objects/BLN_CorrectiveActionReport__c/fields/BLN_BusinessFaultWarranty__c.field-meta.xml
<CustomField>
    <fullName>BLN_BusinessFaultWarranty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-3982 Used to Check Business Unit at Fault for this Warranty.</description>
    <inlineHelpText>Are Business Unit at Fault for this Warranty?</inlineHelpText>
    <label>Business Fault for Warranty</label>
    <type>Checkbox</type>
</CustomField>