force-app/main/default/objects/BLN_CorrectiveActionReport__c/fields/BLN_BusinessUnitName__c.field-meta.xml
<CustomField>
    <fullName>BLN_BusinessUnitName__c</fullName>
    <description>FOUK-3982 Used to Store Business Unit Name</description>
    <label>Business Unit Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>