force-app/main/default/objects/BLN_CorrectiveActionReport__c/fields/BLN_BWoFIssue__c.field-meta.xml
<CustomField>
    <fullName>BLN_BWoFIssue__c</fullName>
    <description>FOUK-3982 Used to Store Belron Way of Fitting Issue.</description>
    <label>BWoF Issue</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BWOF - Step 1 Assess working environment, identify and use required PPE</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 2 Collect and verify parts against device or workorder</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 3 Meet &amp; greet the customer and explain work to be done.</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 4 Verify parts against the vehicle</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 5 Perform visual inspection with customer, inform customer of pre-existing damage</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 6 Perform technical inspection, apply necessary car protection. ADAS jobs: Add battery support &amp; pre scan vehicle for pre-existing error codes</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 7 Read vital information &amp; fitting Instructions</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 8 Clean &amp; prepare glass, install lifting device/s</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 9 Decontaminate glass</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 10 Remove camera &amp; other sensors, test fit to new glass</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 11 Apply full car protection</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 12 Check decking height and gaps</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 13 Remove and check parts, store safely</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 14 Cut out &amp; remove old windscreen / windshield</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 15 Inspect old polyurethane &amp; determine where to apply new polyurethane</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 16 Inspect &amp; clean pinch weld / aperture and take appropriate corrosion action</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 17 Cut back old polyurethane to required height. Prepare bonding surfaces</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 18 Prepare bonding surfaces following adhesive system guidelines</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 19 Respect flash off times</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 20 Extrude new polyurethane at correct angle and speed, note minimum driveaway time</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 21 Install new glass, check decking height, position &amp; gaps. Secure glass with required support.</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 22 Install removed parts &amp; check, connect camera wiring</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 23 Check functionality of glass features &amp; Head’s Up Display</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 24 Quality Check – respect minimum driveaway times</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 25 Prepare static or dynamic recalibration: Connect battery support &amp; diagnostic control unit</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 26 Perform static, dynamic or dual recalibration, any sensor resets required &amp; complete post scan</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 27 Thoroughly vacuum affected area &amp; clean fitted glass inside and out, apply rain repellent if applicable</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 28 Perform final Quality Check</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 29 Inform customer of the work you have done and care you have taken &amp; VAPS fitted</fullName>
            </value>
            <value>
                <fullName>BWOF - Step 30 Complete paperwork / complete job on device</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>