force-app/main/default/objects/BLN_CorrectiveActionReport__c/fields/BLN_Case__c.field-meta.xml
<CustomField>
    <fullName>BLN_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-3982 Used to Store which Case holds the Warranty Job.</description>
    <inlineHelpText>Case which holds the Warranty Job</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Corrective Action Reports (Case)</relationshipLabel>
    <relationshipName>Corrective_Action_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>