force-app/main/default/objects/BLN_CorrectiveActionReport__c/fields/BLN_CorrectiveActionsNeeded__c.field-meta.xml
<CustomField>
    <fullName>BLN_CorrectiveActionsNeeded__c</fullName>
    <description>FOUK-3982 Used to Store Corrective actions needed to avoid the quality issue data.</description>
    <inlineHelpText>Corrective actions needed to avoid this quality issue moving forward.Please provide as much detail as possible.</inlineHelpText>
    <label>Corrective Actions Needed</label>
    <type>TextArea</type>
</CustomField>