force-app/main/default/objects/BLN_CorrectiveActionReport__c/fields/BLN_CustomerConcernsResolved__c.field-meta.xml
<CustomField>
    <fullName>BLN_CustomerConcernsResolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-3982 To Checked Customer Concerns Resolved.</description>
    <label>Customer Concerns Resolved</label>
    <type>Checkbox</type>
</CustomField>