force-app/main/default/objects/BLN_CorrectiveActionReport__c/fields/BLN_CustomerIssueDescription__c.field-meta.xml
<CustomField>
    <fullName>BLN_CustomerIssueDescription__c</fullName>
    <description>FOUK-3982 To Add Customer Issue of Description.</description>
    <label>Customer Issue of Description</label>
    <type>TextArea</type>
</CustomField>