force-app/main/default/objects/BLN_CorrectiveActionReport__c/fields/BLN_ManagerName__c.field-meta.xml
<CustomField>
    <fullName>BLN_ManagerName__c</fullName>
    <description>FOUK-3982 To Store Manager Name.</description>
    <label>Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>