force-app/main/default/objects/BLN_CorrectiveActionReport__c/fields/BLN_NotAtFault__c.field-meta.xml
<CustomField>
    <fullName>BLN_NotAtFault__c</fullName>
    <description>FOUK-3982 USed to Store Not at Fault Description.</description>
    <inlineHelpText>Please describe in detail why we were not at fault?</inlineHelpText>
    <label>Not at Fault Description</label>
    <type>TextArea</type>
</CustomField>