force-app/main/default/objects/BLN_CorrectiveActionReport__c/fields/BLN_OriginalCase__c.field-meta.xml
<CustomField>
    <fullName>BLN_OriginalCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-3982 For Original Case from which Warranty was raised.</description>
    <inlineHelpText>Original Case from which Warranty was raised.</inlineHelpText>
    <label>Original Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Corrective Action Reports</relationshipLabel>
    <relationshipName>Corrective_Action_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>