force-app/main/default/objects/BLN_CorrectiveActionReport__c/fields/BLN_ProductCode__c.field-meta.xml
<CustomField>
    <fullName>BLN_ProductCode__c</fullName>
    <description>FOUK-3982 Store Product Code from Product.</description>
    <label>Full Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>