force-app/main/default/objects/BLN_CorrectiveActionReport__c/fields/BLN_ProductIssue__c.field-meta.xml
<CustomField>
    <fullName>BLN_ProductIssue__c</fullName>
    <description>FOUK-3982 Used to display list of product Issue.</description>
    <label>Product Issue</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PQ 1 Glass - ADAS bracket</fullName>
            </value>
            <value>
                <fullName>PQ 2 Glass - Antenna</fullName>
            </value>
            <value>
                <fullName>PQ 3 Glass - Delaminated</fullName>
            </value>
            <value>
                <fullName>PQ 4 Glass - Heated screen Connections</fullName>
            </value>
            <value>
                <fullName>PQ 5 Glass - Heated screen Elements</fullName>
            </value>
            <value>
                <fullName>PQ 6 Glass - HUD</fullName>
            </value>
            <value>
                <fullName>PQ 7 Glass - Marks between interlayer</fullName>
            </value>
            <value>
                <fullName>PQ 8 Glass - Mirror Boss Adhesion</fullName>
            </value>
            <value>
                <fullName>PQ 9 Glass - Misshaped</fullName>
            </value>
            <value>
                <fullName>PQ 10 Glass - Optic Distorted</fullName>
            </value>
            <value>
                <fullName>PQ 11 Glass - Rain sensor bracket</fullName>
            </value>
            <value>
                <fullName>PQ 12 Glass - Unidentified Fracture</fullName>
            </value>
            <value>
                <fullName>PQ 13 Trim - Fitment/Quality</fullName>
            </value>
            <value>
                <fullName>PQ 14 Clips - Quality</fullName>
            </value>
            <value>
                <fullName>PQ 15 Glass - ADAS Heating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>