force-app/main/default/objects/BLN_CorrectiveActionReport__c/fields/BLN_ProductReturned__c.field-meta.xml
<CustomField>
    <fullName>BLN_ProductReturned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-3982 To checked Product Returned or Not.</description>
    <label>Product Returned</label>
    <type>Checkbox</type>
</CustomField>