force-app/main/default/objects/BLN_CorrectiveActionReport__c/fields/BLN_Status__c.field-meta.xml
<CustomField>
    <fullName>BLN_Status__c</fullName>
    <description>FOUK-3982 Store Status Value.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>