force-app/main/default/objects/BLN_CorrectiveActionReport__c/fields/BLN_TechniciansOnOriginalAppointments__c.field-meta.xml
<CustomField>
    <fullName>BLN_TechniciansOnOriginalAppointments__c</fullName>
    <description>FOUK-3987, This field is used to store the names of technicians who worked on original appointments. This is used for reporting purpose.</description>
    <label>Technicians On Original Appointments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>