force-app/main/default/objects/BLN_CorrectiveActionReport__c/fields/BLN_TypeofIssue__c.field-meta.xml
<CustomField>
    <fullName>BLN_TypeofIssue__c</fullName>
    <description>FOUK-3982 To Select Type of Issue</description>
    <label>Type of Issue</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Belron Way of Fitting</fullName>
            </value>
            <value>
                <fullName>Product Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>