force-app/main/default/objects/BLN_CorrectiveActionReport__c/fields/BLN_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>BLN_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-3982 To Store Vehicle Data.</description>
    <label>Vehicle</label>
    <referenceTo>BLN_Vehicle__c</referenceTo>
    <relationshipLabel>Corrective Action Reports</relationshipLabel>
    <relationshipName>Corrective_Action_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>