force-app/main/default/objects/BLN_CorrectiveActionReport__c/fields/BLN_WarrantyVisitFindings__c.field-meta.xml
<CustomField>
    <fullName>BLN_WarrantyVisitFindings__c</fullName>
    <description>FOUK-3982 Used to Store Warranty Visit Findings</description>
    <label>Warranty Visit Findings</label>
    <type>TextArea</type>
</CustomField>