force-app/main/default/objects/BLN_CorrectiveActionReport__c/fields/BLN_WorkOrderLineItem__c.field-meta.xml
<CustomField>
    <fullName>BLN_WorkOrderLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-3987, It is used to relate the WOLI to CAR report. This field to be used on report so that the operation manager can redirect to WOLI and see photos and videos captured.</description>
    <label>Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Corrective Action Reports</relationshipLabel>
    <relationshipName>Corrective_Action_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>